--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "openai": "^4.11.1",
+    "path": "^0.12.7",
+    "ws": "^8.14.2"
   }
 }
